# generic-robot-env

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/generic_robot_env/: __init__.py  generic_robot_env.py
tests/: test_generic_robot_env.py
tools/: keyboard_teleop_franka_fr3_v2.py
