[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "generic-robot-env"
version = "0.0.1"
description = "A generic MuJoCo-based robot environment generator for LeRobot or Gymnasium-style experiments."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Bernie Telles", email = "btelles@gmail.com" }
]
license = { text = "MIT" }
keywords = ["mujoco", "gymnasium", "robotics", "reinforcement-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Games/Entertainment :: Simulation",
]
dependencies = [
    "gym-hil>=0.1.13",
    "gymnasium",
    "mujoco>=3.5.0",
    "pytest>=9.0.2",
    "Pillow",
    "numpy",
]

[project.urls]
"Homepage" = "https://github.com/btelles/generic-robot-env"
"Bug Tracker" = "https://github.com/btelles/generic-robot-env/issues"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest-cov",
    "mypy",
]

[tool.pytest.ini_options]
pythonpath=["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RET"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["generic_robot_env"]
