[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "generic-robot-env"
version = "0.0.3"
description = "A generic MuJoCo-based robot environment generator for LeRobot or Gymnasium-style experiments."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Bernie Telles", email = "btelles@gmail.com" }
]
license = { text = "MIT" }
keywords = ["mujoco", "gymnasium", "robotics", "reinforcement-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Games/Entertainment :: Simulation",
]
dependencies = [
    "gym-hil>=0.1.13",
    "gymnasium",
    "mujoco>=3.5.0",
    "pytest>=9.0.2",
    "Pillow",
    "numpy",
    "ruff>=0.15.2",
    "opencv-python>=4.13.0.92",
]

[project.urls]
"Homepage" = "https://github.com/btelles/generic-robot-env"
"Bug Tracker" = "https://github.com/btelles/generic-robot-env/issues"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest-cov",
    "mypy",
    "pre-commit",
]

[tool.pytest.ini_options]
pythonpath=["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RET"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["generic_robot_env"]

[dependency-groups]
dev = [
    "lerobot[aloha,hilserl]>=0.4.3",
]

[tool.bumpversion]
current_version = "0.0.3"
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.
    (?P<minor>0|[1-9]\\d*)\\.
    (?P<patch>0|[1-9]\\d*)
    (?:
        -                             # dash separator for pre-release section
        (?P<pre_l>[a-zA-Z-]+)         # pre-release label
        (?P<pre_n>0|[1-9]\\d*)        # pre-release version number
    )?                                # pre-release section is optional
"""
serialize = [
    "{major}.{minor}.{patch}-{pre_l}{pre_n}",
    "{major}.{minor}.{patch}",
]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []
[tool.bumpversion.parts.pre_l]
values = ["alpha", "beta", "rc", "final"]
optional_value = "final"
